# AIOps

./: README.md
AI Playground/: Build a Character AI Chatbot Using OpenAI API-checkpoint.ipynb  README.md
crew/research_ai_agents/: README.md  pyproject.toml  report.md
crew/research_ai_agents/src/research_ai_agents/: crew.py  main.py
