[project]
name = "research_ai_agents"
version = "0.1.0"
description = "research_ai_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
research_ai_agents = "research_ai_agents.main:run"
run_crew = "research_ai_agents.main:run"
train = "research_ai_agents.main:train"
replay = "research_ai_agents.main:replay"
test = "research_ai_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
